# Policy_Documents_Summary

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  run.py
.claude/: settings.local.json
app/: main.py
app/api/: routes.py
app/core/: config.py  database.py  extractor.py  parser.py  reporter.py  zip_extractor.py
app/models/: db.py  policy.py
docker/: build.bat  load-and-run.sh
static/: index.html
